--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
     		<artifactId>java-jwt</artifactId>
     		<version>4.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.8.26</version>
+		</dependency>
 
 	</dependencies>
 
